# SmartMirror-Camera-Publisher

./: .gitignore  LICENSE  README.md  SmartMirror-Camera-Publisher.js  node_helper.js
camera_publisher/: image_realsense_broadcaster.py  image_realsense_broadcaster_cplusplus.py  image_webcam_broadcaster.py
camera_publisher/realsense_cplusplus/: CMakeLists.txt  main.cpp  main_refactored.cpp
